force-app/main/default/objects/SharePoint_Document__c/SharePoint_Document__c.object-meta.xml
<CustomObject>
    <label>SharePoint_Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SharePoint_Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>