force-app/main/default/objects/SharePoint_Document__c/fields/ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>ContentVersion_Id__c</fullName>
    <label>ContentVersion_Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>