force-app/main/default/objects/SharePoint_Document__c/fields/Is_Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Current_Version</label>
    <type>Checkbox</type>
</CustomField>