force-app/main/default/objects/SharePoint_Document__c/fields/SharePoint_Id__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Id__c</fullName>
    <label>SharePoint_Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>